modified webpage title

--- a/serverCode/client/index.html
+++ b/serverCode/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Graphs</title>
+  <title>PeperoniGratis</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="static/script.js"></script>
   <link rel="stylesheet" href="static/bulma.css">
@@ -13,7 +13,7 @@
   <div class="hero is-primary">
     <div class="hero-body has-text-centered">
       <div class="title">
-        Peperoni Gratis
+        GreenHouse Monitoring
       </div>
     </div>
   </div>
